--- a/seed.yaml
+++ b/seed.yaml
@@ -1,7 +1,6 @@
 # seed.yaml — Automation Contract for organvm-iii-ergon/gamified-coach-interface
 # Schema: seed/v1.0
-# Generated: 2026-02-12 (AUTONOMY Sprint)
-# Category: standard
+# Generated: 2026-02-17 (SENSORIA Sprint)
 
 schema_version: "1.0"
 organ: III
@@ -10,12 +9,13 @@ repo: gamified-coach-interface
 org: organvm-iii-ergon
 
 metadata:
-  implementation_status: PRODUCTION
+  implementation_status: ACTIVE
   tier: standard
   promotion_status: LOCAL
   last_validated: "2026-02-11"
-  generated: "2026-02-12"
-  sprint: "AUTONOMY"
+  generated: "2026-02-17"
+  sprint: "SENSORIA"
+  language: javascript
 
 agents:
   - name: ci
@@ -24,9 +24,10 @@ agents:
     description: "Continuous integration pipeline"
 
 produces:
-  - type: dependency
-    description: Consumed by organvm-iii-ergon/classroom-rpg-aetheria
-    consumers: [organvm-iii-ergon/classroom-rpg-aetheria]
+  - type: product
+    description: "Software product, API, or service"
+
+consumes: []
 
 subscriptions:
   - event: governance.updated
